--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,51 @@ TaskManager.Contracts/obj/Debug/net8.0/TaskManager.Contracts.dll
 TaskManager.Contracts/obj/Debug/net8.0/TaskManager.Contracts.pdb
 TaskManager.Contracts/obj/Debug/net8.0/ref/TaskManager.Contracts.dll
 TaskManager.Contracts/obj/Debug/net8.0/refint/TaskManager.Contracts.dll
+TaskManager/bin/Debug/net8.0/./TaskManager/Logs/Logfiles
+TaskManager/bin/Debug/net8.0/D:/Projects/LoggingDemo/logs/logfile
+TaskManager/bin/Debug/net8.0/log4net.config
+TaskManager/bin/Debug/net8.0/log4net.dll
+TaskManager/bin/Debug/net8.0/logFiles.log
+TaskManager/bin/Debug/net8.0/logFiles.log20240313-1830
+TaskManager/bin/Debug/net8.0/logFiles.log20240313-1843
+TaskManager/bin/Debug/net8.0/logFiles.log20240313-1844
+TaskManager/bin/Debug/net8.0/logFiles.log20240313-1846
+TaskManager/bin/Debug/net8.0/logFiles.log20240313-1851
+TaskManager/bin/Debug/net8.0/logFiles.log20240313-1857
+TaskManager/bin/Debug/net8.0/logFiles.log20240313-1859
+TaskManager/bin/Debug/net8.0/logFiles.log20240313-1901
+TaskManager/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.InMemory.dll
+TaskManager/bin/Debug/net8.0/Microsoft.Extensions.Logging.Log4Net.AspNetCore.dll
+TaskManager/bin/Debug/net8.0/System.Configuration.ConfigurationManager.dll
+TaskManager/bin/Debug/net8.0/System.Security.Cryptography.ProtectedData.dll
+TaskManager/bin/Debug/net8.0/System.Security.Permissions.dll
+TaskManager/bin/Debug/net8.0/TaskManager.Contracts.dll
+TaskManager/bin/Debug/net8.0/TaskManager.Contracts.pdb
+TaskManager/bin/Debug/net8.0/TaskManager.deps.json
+TaskManager/bin/Debug/net8.0/TaskManager.dll
+TaskManager/bin/Debug/net8.0/TaskManager.pdb
+TaskManager/bin/Debug/net8.0/runtimes/win/lib/netstandard2.0/System.Security.Cryptography.ProtectedData.dll
+TaskManager/bin/Debug/net8.0/./TaskManager/Logs/Logfiles
+TaskManager/bin/Debug/net8.0/D:/Projects/LoggingDemo/logs/logfile
+TaskManager/bin/Debug/net8.0/Microsoft.EntityFrameworkCore.InMemory.dll
+TaskManager/bin/Debug/net8.0/TaskManager.Contracts.dll
+TaskManager/bin/Debug/net8.0/TaskManager.Contracts.pdb
+TaskManager/bin/Debug/net8.0/TaskManager.deps.json
+TaskManager/bin/Debug/net8.0/TaskManager.dll
+TaskManager/bin/Debug/net8.0/TaskManager.pdb
+TaskManager/obj/project.assets.json
+TaskManager/obj/project.nuget.cache
+TaskManager/obj/TaskManager.csproj.nuget.dgspec.json
+TaskManager/obj/TaskManager.csproj.nuget.g.targets
+TaskManager/obj/Debug/net8.0/project.razor.json
+TaskManager/obj/Debug/net8.0/TaskManager.AssemblyInfo.cs
+TaskManager/obj/Debug/net8.0/TaskManager.AssemblyInfoInputs.cache
+TaskManager/obj/Debug/net8.0/TaskManager.assets.cache
+TaskManager/obj/Debug/net8.0/TaskManager.csproj.AssemblyReference.cache
+TaskManager/obj/Debug/net8.0/TaskManager.csproj.CoreCompileInputs.cache
+TaskManager/obj/Debug/net8.0/TaskManager.csproj.FileListAbsolute.txt
+TaskManager/obj/Debug/net8.0/TaskManager.dll
+TaskManager/obj/Debug/net8.0/TaskManager.pdb
+TaskManager/obj/Debug/net8.0/TaskManager.sourcelink.json
+TaskManager/obj/Debug/net8.0/ref/TaskManager.dll
+TaskManager/obj/Debug/net8.0/refint/TaskManager.dll
