caching and pagination

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,31 @@ TaskManager/obj/Debug/net8.0/TaskManager.pdb
 TaskManager/obj/Debug/net8.0/TaskManager.sourcelink.json
 TaskManager/obj/Debug/net8.0/ref/TaskManager.dll
 TaskManager/obj/Debug/net8.0/refint/TaskManager.dll
+TaskManager/bin/Debug/net8.0/TaskManager.Contracts.dll
+TaskManager/bin/Debug/net8.0/TaskManager.Contracts.pdb
+TaskManager/bin/Debug/net8.0/TaskManager.dll
+TaskManager/bin/Debug/net8.0/TaskManager.pdb
+TaskManager/obj/Debug/net8.0/project.razor.json
+TaskManager/obj/Debug/net8.0/TaskManager.AssemblyInfo.cs
+TaskManager/obj/Debug/net8.0/TaskManager.AssemblyInfoInputs.cache
+TaskManager/obj/Debug/net8.0/TaskManager.csproj.AssemblyReference.cache
+TaskManager/obj/Debug/net8.0/TaskManager.dll
+TaskManager/obj/Debug/net8.0/TaskManager.pdb
+TaskManager/obj/Debug/net8.0/TaskManager.sourcelink.json
+TaskManager/obj/Debug/net8.0/ref/TaskManager.dll
+TaskManager/obj/Debug/net8.0/refint/TaskManager.dll
+TaskManager/TaskManager.db
+TaskManager/TaskManager.db-shm
+TaskManager.Contracts/bin/Debug/net8.0/TaskManager.Contracts.dll
+TaskManager.Contracts/bin/Debug/net8.0/TaskManager.Contracts.pdb
+TaskManager.Contracts/obj/Debug/net8.0/TaskManager.Contracts.AssemblyInfo.cs
+TaskManager.Contracts/obj/Debug/net8.0/TaskManager.Contracts.AssemblyInfoInputs.cache
+TaskManager.Contracts/obj/Debug/net8.0/TaskManager.Contracts.dll
+TaskManager.Contracts/obj/Debug/net8.0/TaskManager.Contracts.pdb
+TaskManager.Contracts/obj/Debug/net8.0/TaskManager.Contracts.sourcelink.json
+TaskManager.Contracts/obj/Debug/net8.0/ref/TaskManager.Contracts.dll
+TaskManager.Contracts/obj/Debug/net8.0/refint/TaskManager.Contracts.dll
+TaskManager/bin/Debug/net8.0/TaskManager.Contracts.dll
+TaskManager/bin/Debug/net8.0/TaskManager.Contracts.pdb
+TaskManager/bin/Debug/net8.0/TaskManager.dll
+TaskManager/bin/Debug/net8.0/TaskManager.pdb
